--- a/Tippspiel/WebContent/css/tippspiel.css
+++ b/Tippspiel/WebContent/css/tippspiel.css
@@ -1,59 +1,97 @@
-
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
-		  padding-top: 40px;
-		  padding-bottom: 40px;
-		  background-color: #eee;
-		}
-		
-		.formEigen{
-		  max-width: 330px;
-		  padding: 0px;
-		  margin: 0 auto;
-		 
-		}
-		
-		.formEigen .form-signin-heading,
-		.formEigen .form-signup-heading,
-		.formEigen .checkbox {
-		  margin-bottom: 10px;
-		}
-		.formEigen .checkbox {
-		  font-weight: normal;
-		}
-		.formEigen .form-control {
-		  position: relative;
-		  height: auto;
-		  -webkit-box-sizing: border-box;
-		     -moz-box-sizing: border-box;
-		          box-sizing: border-box;
-		  padding: 10px;
-		  font-size: 16px;
-		}
-		.formEigen .form-control:focus {
-		  z-index: 2;
-		}
-		.formEigen input[type="email"]{
-		  margin-bottom: -1px;
-		  border-bottom-right-radius: 0;
-		  border-bottom-left-radius: 0;
-		}
-		.formEigen input[type="password"]{
-		  margin-bottom: 0px;
-		  border-top-left-radius: 0;
-		  border-top-right-radius: 0;
-		}
-		
-		.formEigen input[type="email"]{
-		  margin-bottom: -1px;
-		  margin-bottom: -1px;
-		  border-top-left-radius: 0;
-		  border-top-right-radius: 0;
-		  border-bottom-right-radius: 0;
-		  border-bottom-left-radius: 0;
-		}
-		
-		.formEigen input[type="text"]{
-		  margin-bottom: -1px;
-		  border-bottom-right-radius: 0;
-		  border-bottom-left-radius: 0;
-		}
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+body > .container {
+  padding: 60px 15px 0;
+}
+.container .text-muted {
+  margin: 20px 0;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
+}
+body {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #eee;
+}
+
+.formEigen{
+  max-width: 330px;
+  padding: 0px;
+  margin: 0 auto;
+ 
+}
+
+.formEigen .form-signin-heading,
+.formEigen .form-signup-heading,
+.formEigen .checkbox {
+  margin-bottom: 10px;
+}
+.formEigen .checkbox {
+  font-weight: normal;
+}
+.formEigen .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.formEigen .form-control:focus {
+  z-index: 2;
+}
+.formEigen input[type="email"]{
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.formEigen input[type="password"]{
+  margin-bottom: 0px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.formEigen input[type="email"]{
+  margin-bottom: -1px;
+  margin-bottom: -1px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.formEigen input[type="text"]{
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
